<resources>
    <string name="hello_blank_fragment">HELLO EVERYONE</string>
    <string name="app_name">CHAMPIONS LEAGUE</string>
    <string name="strlogoArteLista">Champions League</string>
    <string name="hUserName">Usuario</string>
    <string name="hPassword">Contraseña</string>
    <string name="strContrasenia">Contraseña</string>
    <string name="strIniciarSesion">Iniciar sesión</string>
    <string name="strNoTieneCuenta">No tienes cuenta?</string>
    <string name="strCreaUna">Cree una aquí</string>
    <string name="hemail">Email</string>
    <string name="hConfirmarPassword">Confirmar password</string>
    <string name="strCrearCuenta">Crear cuenta</string>
    <string name="strTituloHome">Todos queremos la champions y vamos a lucharla por supuesto</string>
    <string name="strTituloHomeVistas">Barcelona ganara la proxima champions, tenemos fé</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="strArtista">Artista</string>
    <string name="strEvento">Exposición Primavera en Oleo</string>
    <string name="strGaleria">Galería</string>
    <string name="strNombreArtista">Manchester 4 - 3 Madrid</string>
    <string name="strTituloArte">Partido de Ida</string>
    <string name="strMeGusta">Me gusta</string>
    <string name="strPrecioPintura">1,200.00</string>
    <string name="strMoneda">$</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="strDescripcionArte">Trepidante partido en la ida de semifinales de la Liga de Campeones. El Manchester City derrotó al Madrid (4-3) en un partido trepidante, donde el conjunto inglés, líder de la Premier inglesa y entrenado por Pep Guardiola, dio primero en esta serie de semifinales de la competición. No obstante, pudo ser mucho peor para el Madrid, que perdía 2-0 a los 10 minutos y que siempre reaccionó cuando el City iba marcando. Benzema hizo el 2-1, Vinicius luego el 3-2 y todavía Benzema, con 4-2, tiró un penalti a lo Panenka para hacer el 4-3.</string>
    <string name="strCategoria">UEFA</string>


    <string name="strNombreArtistaPerfil">Rodrigo Matus Lazo</string>
    <string name="strCiudad">Managua, Nicaragua</string>
    <string name="strAcercaDeMi">Acerca de mí</string>
    <string name="strNombreTwitter">\@RafaelLopez</string>
    <string name="strDescripcionQuienSoy">Nací en la capital de Nicaragua, mi pasión ha sido la pintura en Oleo, siendo mis favoritas las pinturas en oleo. Durante niño me inicié en la pintura de forma nata, luego fui perfeccionando mi técnica en escuelas profesionales. Tengo mas de 10 años de experiencia en pintura.</string>
    <string name="strCategoriaArtista">Artista plástico</string>
    <string name="strPaisArtista">Nicaragua</string>
    <string name="strHora1">09:00AM</string>
    <string name="strEventoCategoria">Pintura en Oleo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="strMapaUbicacion">Mapa de Ubicación Geográfica</string>

    <!-- Menu -->
    <string name="menu_home">Inicio</string>
    <string name="menu_games">Partidos</string>
    <string name="menu_players">Jugadores</string>
    <string name="menu_events">Eventos</string>
    <string name="strLugarEvento">UNI</string>
    <string name="strUbicacionEvento">UCA 2 Cuadras abajo</string>
    <string name="strSitioWebEvento">https://www.uni.edu.ni</string>
    <string name="strTelefonoEvento">23117222</string>

</resources>

