<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".View.activityLogin">

    <ImageView
        android:id="@+id/imglogoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo2_champions"
        android:layout_marginTop="5dp"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvlogoArteLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strlogoArteLista"
        android:textSize="@dimen/tamtexto3"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imglogoLogin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margenizq"
        android:layout_marginRight="@dimen/margender"
        app:layout_constraintHeight_percent="0.8"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvlogoArteLista">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="Requerido"
            app:helperTextTextColor="@android:color/holo_red_dark"
            android:maxLength="30"
            android:layout_marginTop="35dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tvUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:hint="@string/hemail"
                android:drawablePadding="@dimen/margender"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_username"
                android:gravity="left|center_horizontal"
                tools:ignore="RtlHardcoded" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margentop"
            app:helperText="Requerido"
            app:helperTextTextColor="@android:color/holo_red_dark"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hPassword"
                android:drawablePadding="@dimen/margender"
                android:lines="1"
                android:drawableStart="@drawable/ic_password"
                android:gravity="left|center_horizontal"
                android:inputType="textPassword"
                tools:ignore="RtlHardcoded" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIniciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margentop1"
            android:backgroundTint="@android:color/holo_blue_light"
            android:onClick="onClickArteLista"
            android:text="@string/strIniciarSesion" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:id="@+id/tvNoTieneCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strNoTieneCuenta"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/tamtexto2"
                />

            <TextView
                android:id="@+id/tvCreeUna"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margen"
                android:layout_toEndOf="@+id/tvNoTieneCuenta"
                android:text="@string/strCreaUna"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="@dimen/tamtexto2"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck,UsingOnClickInXml"
                android:onClick="onClickCrearCuenta"/>
        </RelativeLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>