<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".View.fragmentGaleriaDetalle">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarcol"
        android:layout_width="match_parent"
        android:layout_height="@dimen/alto1"
        android:theme="@style/NoActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolcolapse"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/rosa">

            <ImageView
                android:id="@+id/imgdetallearte"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/img_arte2"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax">
            </ImageView>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tooldetallegaleria"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margentop1"
                android:theme="@style/AppTheme.AppBarOverlay"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:layout_collapseMode="pin">
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            
            <TextView
                android:id="@+id/tvArtistaDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamtexto1"
                android:text="@string/strNombreArtista"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margen"/>
            
            <TextView
                android:id="@+id/CategoriaDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamtexto2"
                android:text="@string/strCategoria"
                android:layout_marginStart="@dimen/margen"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/alto3"
                android:background="@color/rosa" />

            <TextView
                android:id="@+id/tvNombrePinturaDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamtexto1"
                android:layout_gravity="center_horizontal"
                android:text="@string/strTituloArte"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margen"/>

            <TextView
                android:id="@+id/txtDetalleArte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/tamtexto3"
                android:text="@string/strDescripcionArte"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/margen"
                android:paddingLeft="@dimen/margen1"
                android:paddingRight="@dimen/margen1" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>