<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:fitsSystemWindows="true"
    tools:context=".View.fragmentEventoUbicacion">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/NoActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolubicaciondetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDatosUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/alto4"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/margen1"
        app:cardElevation="@dimen/margen"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imgubicacion"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_behavior="@id/toolubicaciondetalle"
                tools:ignore="ContentDescription">
            </ImageView>
            <TextView
                android:id="@+id/txtLugarEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/strLugarEvento"
                android:textColor="@color/rosa"
                android:textSize="@dimen/tamtexto1" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtDireccionEvento"
                android:drawableStart="@drawable/ic_mapa"
                android:gravity="center|left"
                android:maxLines="2"
                android:text="@string/strUbicacionEvento"
                android:layout_marginTop="@dimen/margentop"
                android:paddingLeft="@dimen/margenizq"
                tools:ignore="RtlHardcoded,RtlSymmetry">
            </com.google.android.material.textview.MaterialTextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/alto5"
                android:background="@color/colorbackgroundcard">
            </View>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/alto4"
                android:id="@+id/txtSitioWebEvento"
                android:drawableStart="@drawable/ic_link"
                android:gravity="center|left"
                android:text="@string/strSitioWebEvento"
                android:paddingLeft="@dimen/margenizq"
                android:layout_marginTop="@dimen/margen"
                tools:ignore="RtlHardcoded,RtlSymmetry">
            </com.google.android.material.textview.MaterialTextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/alto5"
                android:background="@color/colorbackgroundcard">
            </View>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/alto4"
                android:id="@+id/txtTelefonoEvento"
                android:drawableStart="@drawable/ic_phone"
                android:gravity="center|left"
                android:text="@string/strTelefonoEvento"
                android:paddingLeft="@dimen/margenizq"
                android:layout_marginTop="@dimen/margen"
                tools:ignore="RtlHardcoded,RtlSymmetry">
            </com.google.android.material.textview.MaterialTextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/alto5"
                android:background="@color/colorbackgroundcard">
            </View>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/alto4"
                android:id="@+id/txtHoraEvento"
                android:drawableStart="@drawable/ic_watch"
                android:gravity="center|left"
                android:text=""
                android:paddingLeft="@dimen/margenizq"
                android:layout_marginTop="@dimen/margen"
                tools:ignore="RtlHardcoded,RtlSymmetry"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>