<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.activityCrearCuenta"
    android:fitsSystemWindows="true">
    
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/NoActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolCrearCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginEnd="70dp"
                android:src="@drawable/logo3_champions">
            </ImageView>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margenizq"
                android:layout_marginEnd="@dimen/margender"
                android:padding="@dimen/margen"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:helperText="Requerido"
                    app:helperTextTextColor="@android:color/holo_red_dark"
                    android:maxLength="30"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tvEmailCuenta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="30"
                        android:hint="@string/hemail"
                        android:lines="1"
                        android:inputType="textEmailAddress"
                        >
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen"
                    app:helperText="Requerido"
                    app:helperTextTextColor="@android:color/holo_red_dark"
                    app:counterEnabled="true"
                    app:counterMaxLength="8"
                    app:passwordToggleEnabled="true">
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tvPasswordCuenta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/hPassword"
                        >
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen"
                    app:counterEnabled="true"
                    app:counterMaxLength="8"
                    app:passwordToggleEnabled="true"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tvConfirmarContraseniaCuenta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/hConfirmarPassword"
                        >
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCrearCuenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margentop1"
                    android:text="@string/strCrearCuenta"
                    app:cornerRadius="@dimen/margen"/>
            </LinearLayout>
        </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>